docs: update README with Java 17+ and extended features