@@ -125,6 +125,76 @@ CellData.blank()
 | VERSION | 0x0080 | Version info |
 | CELL | 0x0143 | Cell data |
 | STRING | 0x00F9 | String data |
+| **Extended Records** | | |
+| INDEX | 0x0089 | Row index optimization |
+| FORMAT | 0x0041 | Cell format strings |
+| XF | 0x0043 | Extended format (font/align/fill/border) |
+| FORMULA | 0x0108 | Formula support |
+| MERGE_CELL | 0x00B7 | Merged cells |
+| CONDITIONAL_FORMAT | 0x01CD | Conditional formatting |
+| DATA_VALIDATION | 0x01B2 | Data validation |
+
+## Advanced Features
+
+### Java 17+ MemorySegment Support
+
+The library automatically uses `MemorySegment` (Foreign Memory API) on Java 17+ for better performance:
+
+```java
+// Automatic selection via ServiceLoader
+// Java 8: ByteBufferAllocator (priority 10)
+// Java 17+: MemorySegmentAllocator (priority 20) 
+OffHeapAllocator allocator = AllocatorFactory.createDefaultAllocator();
+```
+
+### Formula Support
+
+```java
+FormulaRecord record = FormulaRecord.create(
+    10, 5,                              // row, col
+    CellType.NUMBER, 42.0,              // result type and value
+    "SUM(A1:A10)", dataBlock);          // formula string
+```
+
+### Cell Formatting
+
+```java
+// Create format
+FormatRecord format = FormatRecord.create(
+    FormatRecord.FORMAT_DATE, "yyyy-mm-dd", dataBlock);
+
+// Create extended format
+XFRecord xf = XFRecord.create(
+    0, FormatRecord.FORMAT_NUMBER,      // font, format
+    XFRecord.ALIGN_RIGHT, XFRecord.VERTICAL_CENTER,
+    0, 0, dataBlock);                   // fill, border
+```
+
+### Merged Cells
+
+```java
+MergeCellRecord merge = MergeCellRecord.create(
+    0, 2, 0, 3, dataBlock);  // merge rows 0-2, cols 0-3
+```
+
+### Data Validation
+
+```java
+DataValidationRecord validation = DataValidationRecord.create(
+    DataValidationRecord.TYPE_WHOLE,    // validation type
+    DataValidationRecord.ERROR_STYLE_STOP,
+    false,                              // allow blank
+    "BETWEEN 1 AND 100", dataBlock);    // validation rule
+```
+
+### Conditional Formatting
+
+```java
+ConditionalFormatRecord cf = ConditionalFormatRecord.create(
+    ConditionalFormatRecord.TYPE_CELL_IS,
+    ConditionalFormatRecord.OPERATOR_GREATER_THAN,
+    "100", dataBlock);                  // condition formula
+```
 
 ## Build
 
@@ -141,15 +211,21 @@ mvn clean package -DskipTests
 
 ## Project Statistics
 
-- Java Source Files: 43
-- Test Cases: 54 (100% pass)
+- Java Source Files: 68
+- Test Cases: 61 (100% pass)
 - Test Coverage: Memory, Format, Data, IO, API layers
+- BIFF12 Record Types: 15+ supported
+- Git Commits: 18
 
 ## Dependencies
 
 **Runtime:**
-- Java 8+ (Java 17+ recommended)
+- Java 8+ (Java 17+ recommended for MemorySegment support)
 - SLF4J API (users must provide implementation)
+
+**Build:**
+- Maven 3.6+
+- For Java 17+ features: JDK 17+ with `--enable-preview` or JDK 21+
 
 **Test:**
 - JUnit 5
